--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "compile": "npx tsc",
     "start": "node ./dist/index.js",
-    "dev": "npx nodemon --watch ./src/ --exec ts-node src/index.ts"
+    "dev": "npx nodemon --watch ./src/ --exec ts-node src/index.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,9 @@
   },
   "homepage": "https://github.com/LucasMagaldi/protochain#readme",
   "devDependencies": {
+    "@types/jest": "^29.4.0",
+    "jest": "^29.4.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
