--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   },
   "homepage": "https://github.com/LucasMagaldi/protochain#readme",
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/jest": "^29.4.0",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "crypto-js": "^4.1.1"
   }
 }
