--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "compile": "npx tsc",
     "start": "node ./dist/index.js",
     "dev": "npx nodemon --watch ./src/ --exec ts-node src/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "blockchain": "npx nodemon --exec ts-node ./src/server/server.ts"
   },
   "repository": {
     "type": "git",
@@ -21,14 +22,20 @@
   },
   "homepage": "https://github.com/LucasMagaldi/protochain#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/crypto-js": "^4.1.1",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/morgan": "^1.9.4",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "crypto-js": "^4.1.1"
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
